--- a/openvino/Dockerfile
+++ b/openvino/Dockerfile
@@ -11,14 +11,10 @@ WORKDIR /app
 COPY requirements.txt .
 
 # 安装依赖包
-RUN pip install --no-cache-dir -r requirements.txt --index-url=https://pypi.tuna.tsinghua.edu.cn/simple/
-
-COPY ./model/ ./model/
-COPY pre_post_processing.py .
+RUN pip3 install --no-cache-dir -r requirements.txt --index-url=https://pypi.tuna.tsinghua.edu.cn/simple/
 COPY server.py .
-COPY vino.py .
 
 ENV API_AUTH_KEY=mt_photos_ai_extra
-EXPOSE 8000
+EXPOSE 8080
 
 CMD [ "python3", "/app/server.py" ]
