--- a/openvino/Dockerfile
+++ b/openvino/Dockerfile
@@ -13,6 +13,7 @@ COPY requirements.txt .
 # 安装依赖包
 RUN pip3 install --no-cache-dir -r requirements.txt --index-url=https://pypi.tuna.tsinghua.edu.cn/simple/
 COPY server.py .
+COPY ./utils ./utils
 
 ENV API_AUTH_KEY=mt_photos_ai_extra
 EXPOSE 8000
