--- a/cuda/requirements.txt
+++ b/cuda/requirements.txt
@@ -1,11 +1,11 @@
 fastapi==0.103.0
-numpy==1.21.6
+numpy==1.24.4
 opencv_contrib_python==4.6.0.66
 opencv_python_headless==4.6.0.66
-paddleocr==2.7.0.2
-#paddlepaddle-gpu==2.5.1.post112 -f https://www.paddlepaddle.org.cn/whl/linux/cudnnin/stable.html
-python-dotenv==1.0.0
 uvicorn==0.23.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
-cn-clip>=1.5.1
+# torch==2.7.0
+# torchvision==0.22.0
+cn-clip==1.5.1
+RapidOCR==2.0.6
